--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,25 @@ body {
 
 .watermark-text {
   position: absolute;
+  top: 45%;
+  left: 45%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  font-size: 1rem;
+  color: rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  user-select: none;
+  pointer-events: none;
+}
+
+.watermark-text2 {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(-45deg);
-  font-size: 2rem;
+  font-size: 1rem;
   color: rgba(0, 0, 0, 0.1);
   font-weight: bold;
   letter-spacing: 5px;
